k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: credit-app
  labels:
    app: credit-app
